# Httpq-Secure-Chat

./: .gitignore  readme.md
admin-tools/scripts/: check-local-stack.ps1  client_stack_smoke.py  generate-relay-key.ps1  relay_smoke.py  run-local-smoke.ps1  start-local-stack.ps1  stop-local-stack.ps1
client-core/: Cargo.toml
client-core/src/: lib.rs
client-core/src/engine/: bootstrap.rs  direct.rs  group.rs  mod.rs  trust.rs
client-core/src/httpq/: mod.rs
client-core/src/kt/: mod.rs
client-core/src/protocols/: bootstrap.rs  direct.rs  group.rs  mod.rs
client-core/src/storage/: mod.rs
client-tui/: requirements.txt
client-tui/app/: chat_session_controller.py  client_app_controller.py  client_session_adapter.py  direct_adapter.py  direct_bootstrap.py  direct_crypto.py  direct_frames.py  direct_identity.py  direct_math.py  direct_protocol.py  direct_session.py  httpq_client.py  httpq_math.py  httpq_protocol.py  local_state_crypto.py  main.py  mls_backend.py  network_privacy.py  peer_directory.py  peer_pin_store.py  pin_store.py  relay_client.py  relay_event_coordinator.py  room_control.py  room_crypto.py  room_state.py  runtime_policy.py  runtime_state.py  traffic_events.py  trust_adapter.py  ui_privacy.py
client-tui/tests/: test_chat_session_controller.py  test_client_app_controller.py  test_client_session_adapter.py  test_direct_adapter.py  test_direct_protocol.py  test_httpq.py  test_local_state_crypto.py  test_network_privacy.py  test_peer_directory.py  test_relay_event_coordinator.py  (+2 more)
kt-log/: go.mod
relay/: go.mod
witness/: go.mod
(+11 files in other folders)
