[package]
name = "client-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "client_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
ed25519-dalek = "2"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
